--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -4,7 +4,7 @@
 }
 
 /* media queries */
-@media screen and (max-width: 1025px) {
+@media screen and (max-width: 1023px) {
     .hamburger {
         display: block;
         cursor: pointer;
@@ -34,12 +34,12 @@
     .navMenu {
         position: absolute;
         flex-direction: column;
-        gap: 10px;
+        gap: 15px;
         top: 120px;
         width: 100%;
         transition: 0.7s ease-in-out;
         background-color: #fff;
-        padding: 20px 0;
+        padding: 30px 0;
     }
 
     .navMenu.active {
@@ -47,6 +47,12 @@
     }
 
     .navMenu.active {
-        top: -50px;
+        top: -300px;
+    }
+}
+
+@media (min-width: 640px) and (max-width: 1023px)  {
+    .navMenu {
+        padding-top: 60px;
     }
 }
