--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,4 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Playfair+Display:ital,wght@0,700;1,700&display=swap');
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   box-sizing: border-box;
   padding: 0;
